[project]
name = "siebenapp"
version = "0.14"
description = "An experimental dependency-aware goal manager"
authors = [
    {name = "Andrey Hitrin",email = "andrey.hitrin@gmail.com"}
]
license = {text = "GPL2"}
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "PySide6 (>= 6.6.0)"
]

[project.gui-scripts]
sieben = "siebenapp.app:main"

[project.scripts]
clieben = "siebenapp.cli:main"
sieben-manage = "siebenapp.manage:main"

[tool.poetry]

[tool.poetry.group.dev.dependencies]
hypothesis = "^6.136.1"
mypy = "^1.17.0"
mypy-extensions = "^1.1.0"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
black = "^25.1.0"
approvaltests-minimal = "^15.0.0"
radon = "^6.0.1"
pyupgrade = "^3.20.0"
typing-extensions = "^4.14.1"
py-spy = "^0.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
