[project]
name = "siebenapp"
version = "0.14"
description = "An experimental dependency-aware goal manager"
authors = [
    {name = "Andrey Hitrin",email = "andrey.hitrin@gmail.com"}
]
license = {text = "GPL2"}
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "PySide6 (>= 6.6.0)"
]

[project.gui-scripts]
sieben = "siebenapp.app:main"

[project.scripts]
clieben = "siebenapp.cli:main"
sieben-manage = "siebenapp.manage:main"

[tool.poetry]

[tool.poetry.group.dev.dependencies]
hypothesis = "^6.151.5"
mypy = "^1.19.1"
mypy-extensions = "^1.1.0"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
black = "^26.1.0"
approvaltests-minimal = "^17.1.0"
radon = "^6.0.1"
pyupgrade = "^3.21.2"
typing-extensions = "^4.15.0"
py-spy = "^0.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
